test weg 12 mei

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		  	</div>
 		  	
 		  	<div class="wit uitlijn">
-		  	Kom niet voor verrassingen te staan, houd nauwkeurig alle prijzen en aanbiedingen bij. Bereken wat de kosten zijn met of zonder BTW en/of kortingen. Maak foto's en/of aantekeningen van de gewenste artikelen. testtesttest 
+		  	Kom niet voor verrassingen te staan, houd nauwkeurig alle prijzen en aanbiedingen bij. Bereken wat de kosten zijn met of zonder BTW en/of kortingen. Maak foto's en/of aantekeningen van de gewenste artikelen.
 		  	</div>
 		  	
 		  	<div class="blauw uitlijn">
