Pagina transities toegevoegd.
Foute link bij bereken gefixed

--- a/bereken.html
+++ b/bereken.html
@@ -62,7 +62,7 @@
 
         </fieldset>
     <div>
-    <a href="nederlands.html" data-transition="flip">- menu -</a>
+    <a href="menu.html" data-transition="flip" data-direction="reverse">- menu -</a>
     </div>
     
     </form>
