--- a/som.html
+++ b/som.html
@@ -65,7 +65,7 @@
       </div>
       
     </fieldset>
-    <div> <a href="menu.html">- menu -</a> </div>
+    <div> <a href="menu.html" data-direction="reverse" data-transition="flip">- menu -</a> </div>
     </form>
     
     <script>
