--- a/plaatje.html
+++ b/plaatje.html
@@ -29,6 +29,7 @@
 	<a class="knop" onclick="testCam()">Maak een foto.</a>
 
     <div id="plaatje">
+    	<img id="foto" width="200" />
     </div>
 </div>
 </body>
