Tekst centreren op foto pagina

--- a/plaatje.html
+++ b/plaatje.html
@@ -28,8 +28,10 @@
 <div id="start-container">
 
 	<div class="tekst">
-		<h4>Maak een foto en ga verder</h4>
-        <h4 style="color:#03c">Take a picture and continue</h4>
+		<center>
+			<h4>Maak een foto en ga verder</h4>
+        	<h4 style="color:#03c">Take a picture and continue</h4>
+        </center>
 	</div>
 
 	<a class="knop" href="#" onclick="testCam()">Maak een foto.</a>
