Tekst gecentreerd op foto pagina

--- a/plaatje.html
+++ b/plaatje.html
@@ -27,11 +27,9 @@
 
 <div id="start-container">
 
-	<div class="tekst">
-		<center>
+	<div class="tekst midden" style="width: 290px;">
 			<h4>Maak een foto en ga verder</h4>
-        	<h4 style="color:#03c">Take a picture and continue</h4>
-        </center>
+        	<h4 style="color:#03c;">Take a picture and continue</h4>
 	</div>
 
 	<a class="knop" href="#" onclick="testCam()">Maak een foto.</a>
