--- a/notes.html
+++ b/notes.html
@@ -72,9 +72,9 @@ function Results (form) {
 <label>Bijzonderheden / Details</label>
 <input type="text" name="input6" id="input6"  value="" />
 </div>
-
+<div>
 <input  type="submit" value="Submit" onClick="Results(this.form)">
-
+</div>
 
 
 <!--
@@ -82,6 +82,9 @@ function Results (form) {
 -->
 
 </fieldset>
+<a href="menu.html" data-transition="flip" data-direction="reverse">- menu -</a>
+    </div>
+
 </form>
 
 </div>
