--- a/plaatje.html
+++ b/plaatje.html
@@ -32,7 +32,9 @@
         	<h4 style="color:#03c;">Take a picture and continue</h4>
 	</div>
 
-	<a class="knop" href="#" onclick="testCam()">Maak een foto.</a>
+	<a href="#" onclick="testCam()">
+	<img src="images/camera.png" />
+	</a>
 
     <div class="foto-frame">
     	<p id="nog-geen-foto">
