--- a/plaatje.html
+++ b/plaatje.html
@@ -43,6 +43,10 @@
     	</p>
     	<img id="foto" width="250" />
     </div>
+    <div>
+    <a href="menu.html" data-transition="flip" data-direction="reverse">- menu -</a>
+    </div>
+    
 </div>
 </body>
 </html>
