knoppen notes en som

--- a/notes.html
+++ b/notes.html
@@ -43,7 +43,7 @@ function Results (form) {
 </script>
 <form  action="" name="noteForm" id="noteForm" data-ajax="false">
 <fieldset>
-<legend>Aantekeningen / Notes</legend>
+<legend>Aantekeningen<span class="blauw">&nbsp;&nbsp;&nbsp; Notes</span></legend>
 <div>
 <label>Artikel/Product</label>
 <input type="text" name="input1" id="input1" value="" />
@@ -73,6 +73,8 @@ function Results (form) {
 <label>Bijzonderheden / Details</label>
 <input type="text" name="input6" id="input6"  value="" />
 </div>
+
+
 <div>
 <button  type="submit" name="Submit" onClick="Results(this.form)" data-role="none">Submit</button>
 </div>
