--- a/bereken.html
+++ b/bereken.html
@@ -21,7 +21,7 @@
 <body>
 <div id="main-container">
     <!-- het formulier -->
-    <form action="" method="post" name="theForm" id="theForm" >
+    <form action="" method="post" name="theForm" id="theForm" data-ajax="false" >
         <fieldset>
             <legend>BTW/korting<span class="blauw">&nbsp;&nbsp;&nbsp;VAT/discounts</span></legend>
             
