--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
             
 			<a class="knop" href="plaatje.html" data-transition="flip">Foto van  het artikel maken<br/><span class="blauw">Take picture of the product</span></a>
             
-			<a class="knop" href="notes.html" data-transition="flip">Aantekeningen<br/><span class="blauw">Notes</span></a>
+			<a class="knop" href="#">nog een optie<br/><span class="blauw">an other option</span></a>
 
 			<a class="knop" href="#">nog een optie<br/><span class="blauw">an other option</span></a>
             <a href="index.html" data-transition="flip" data-direction="reverse">- home -</a>
